--- a/config/final.yml
+++ b/config/final.yml
@@ -2,7 +2,7 @@
 blobstore:
   provider: s3
   options:
-    bucket_name: bosh-release-kafka-boshrelease
-    access_key_id: READONLY_AWS_ACCESS_KEY
-    secret_access_key: READONLY_AWS_SECRET_ACCESS_KEY
-    encryption_key: PERSONAL_RANDOM_KEY
+    bucket_name: kafka.bosh.hybris.com
+    # access_key_id: READONLY_AWS_ACCESS_KEY
+    # secret_access_key: READONLY_AWS_SECRET_ACCESS_KEY
+    # encryption_key: PERSONAL_RANDOM_KEY
