--- a/templates/stub.yml
+++ b/templates/stub.yml
@@ -2,12 +2,12 @@
 meta:
   environment: NAME
   dns_root: microbosh
-  network_name: bosh_release_kafka1
+  network_name: kafka1
   security_groups:
-    - bosh_release_kafka
+    - kafka
 
 director_uuid: PLACEHOLDER-DIRECTOR-UUID
 
 releases:
-  - name: bosh-release-kafka
+  - name: kafka
     version: latest
