--- a/config/final.yml
+++ b/config/final.yml
@@ -3,4 +3,4 @@ blobstore:
   provider: s3
   options:
     bucket_name: blobs.hybris.com/kafka
-final_name: kafka-hybris-1
+final_name: kafka-hybris
