fixing release name

--- a/releases/index.yml
+++ b/releases/index.yml
@@ -2,3 +2,5 @@
 builds:
   !binary "NjlmMGVjN2RhZTYyYzllMjg4NTdkYzBlMzNiNzM5ZDAxY2JmNzUwMQ==":
     version: 1
+  !binary "NWE4NTEyMGVhYTFkZGRhOTdhYTBmMWVjNDc2NjRjNjU1MzIxYWM0MQ==":
+    version: 2
