Added riemann submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "packages/ruby"]
 	path = packages/ruby
 	url = https://github.com/cloudfoundry/ruby-package.git
+[submodule "src/riemann-tools"]
+	path = src/riemann-tools
+	url = ssh://git@stash.hybris.com:7999/idefix/bosh-src-riemann-tools.git
+[submodule "jobs/riemann-tools"]
+	path = jobs/riemann-tools
+	url = ssh://git@stash.hybris.com:7999/idefix/bosh-job-riemann-tools.git
