--- a/releases/index.yml
+++ b/releases/index.yml
@@ -4,3 +4,5 @@ builds:
     version: 1
   !binary "NWE4NTEyMGVhYTFkZGRhOTdhYTBmMWVjNDc2NjRjNjU1MzIxYWM0MQ==":
     version: 2
+  !binary "MzQyOGJhOTVjYTkwZTlmYjk1MTBiNDBiZDUxMDIwZTliZDA1NmUxNg==":
+    version: '3'
