--- a/.final_builds/packages/kafka/index.yml
+++ b/.final_builds/packages/kafka/index.yml
@@ -3,4 +3,5 @@ builds:
   a62403c8091de9238acfa2609aed0f91a8892596:
     blobstore_id: 38467d1b-04a7-40cc-bcc1-183e3afca44a
     version: a62403c8091de9238acfa2609aed0f91a8892596
-    sha1: 6a4bdea311d7ab85e660888a209198dea375d895
+    sha1: !binary |-
+      NmE0YmRlYTMxMWQ3YWI4NWU2NjA4ODhhMjA5MTk4ZGVhMzc1ZDg5NQ==
