new release v4 - using riemann-tools and zookeeper release from deployment manifest instead

--- a/releases/index.yml
+++ b/releases/index.yml
@@ -6,3 +6,5 @@ builds:
     version: 2
   !binary "MzQyOGJhOTVjYTkwZTlmYjk1MTBiNDBiZDUxMDIwZTliZDA1NmUxNg==":
     version: '3'
+  !binary "MmNkNWY0ZTcyNTZkYTE5YzU4ZWFmMzI5MGFiNTA3MGY5MTA1YTM0MQ==":
+    version: '4'
