--- a/.final_builds/jobs/kafka/index.yml
+++ b/.final_builds/jobs/kafka/index.yml
@@ -4,3 +4,8 @@ builds:
     blobstore_id: 3610645b-d814-4392-82b1-17a728d648a2
     version: d6b54ee02e90022dd73547304a81824c31be958e
     sha1: e6b598213b1659c27e4f202035dc1239ad43446f
+  !binary "MmY4NDMxNzU5ZGNkYWEyODRkYmM2NjY2YjgxMjlkNjk3NWMzOGE0YQ==":
+    version: !binary |-
+      MmY4NDMxNzU5ZGNkYWEyODRkYmM2NjY2YjgxMjlkNjk3NWMzOGE0YQ==
+    sha1: !binary |-
+      ODYwMjg5MDhkMmM2YTcwZTliMzEwNzkzOGMwYjk2ODg5ZGI3MzEyMQ==
