--- a/releases/index.yml
+++ b/releases/index.yml
@@ -8,3 +8,5 @@ builds:
     version: '3'
   !binary "MmNkNWY0ZTcyNTZkYTE5YzU4ZWFmMzI5MGFiNTA3MGY5MTA1YTM0MQ==":
     version: '4'
+  !binary "Yzg4ZGEyYTA5ZjVlN2FlNjRhMjBjNmU2NTUxNzI4NzcwMzcxNDJmNA==":
+    version: '5'
