--- a/releases/index.yml
+++ b/releases/index.yml
@@ -12,3 +12,5 @@ builds:
     version: '5'
   05f451644bc46aa62195abb2fb24e93651bf28da:
     version: '6'
+  ce8535f0fd7df5db7f95a1dc20f72635b4e73a3a:
+    version: '5.1'
