--- a/releases/index.yml
+++ b/releases/index.yml
@@ -1,7 +1,5 @@
 ---
 builds:
-  69f0ec7dae62c9e28857dc0e33b739d01cbf7501:
-    version: 1
   5a85120eaa1ddda97aa0f1ec47664c655321ac41:
     version: 2
   3428ba95ca90e9fb9510b40bd51020e9bd056e16:
@@ -16,3 +14,4 @@ builds:
     version: '5.1'
   eab6561af088074e287f0f06eac05ff654304f0d:
     version: '5.2'
+format-version: '2'
