--- a/releases/index.yml
+++ b/releases/index.yml
@@ -14,4 +14,6 @@ builds:
     version: '5.1'
   eab6561af088074e287f0f06eac05ff654304f0d:
     version: '5.2'
+  2b63a569-7a21-4018-9630-ab73d3f7ad63:
+    version: '6.1'
 format-version: '2'
