--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -7,3 +7,7 @@ java7/openjdk-1.7.0_55.tar.gz:
   object_id: 85be1d54-0b90-40ab-b711-980497df9b05
   sha: 0788b91b35bfdc628143103b17de3194c39a305a
   size: 31534443
+kafka/kafka_2.10-0.8.1.1.tgz:
+  object_id: bed3d75e-ed4b-4bd4-8255-c1f6ac3b1c88
+  sha: 7288a43bb0732789ff0d76d820fc7f40553854fe
+  size: 13790731
