--- a/.final_builds/jobs/kafka/index.yml
+++ b/.final_builds/jobs/kafka/index.yml
@@ -12,4 +12,8 @@ builds:
     version: adfdf744daaf533cf4477448101a87bd887a38c6
     sha1: 7ac05a77f67bbd647c38d79caa504db42054e92a
     blobstore_id: ff640cc7-41bf-4b88-964b-9118904dcfa8
+  95b2948540bfc1efc5520e48e38f9fbf3d413dd4:
+    version: 95b2948540bfc1efc5520e48e38f9fbf3d413dd4
+    sha1: 6e342c79dd02839bc8dd070b27db27b7cdd1a687
+    blobstore_id: 074fb797-0ac7-4106-a863-1ad4a50caa23
 format-version: '2'
