--- a/.final_builds/jobs/kafka/index.yml
+++ b/.final_builds/jobs/kafka/index.yml
@@ -16,4 +16,8 @@ builds:
     version: 95b2948540bfc1efc5520e48e38f9fbf3d413dd4
     sha1: 6e342c79dd02839bc8dd070b27db27b7cdd1a687
     blobstore_id: 074fb797-0ac7-4106-a863-1ad4a50caa23
+  f91d6abe948e79f6acbe1dcc657f8602b146112d:
+    version: f91d6abe948e79f6acbe1dcc657f8602b146112d
+    sha1: 73da7aab5f1b18403b6b009612a3c3f3cc240bd8
+    blobstore_id: 53966e9a-f5bf-4081-be69-b5aeef8fbcfa
 format-version: '2'
