--- a/releases/index.yml
+++ b/releases/index.yml
@@ -30,4 +30,6 @@ builds:
     version: '7.5'
   86909e75-00a9-44a2-906c-db1845f8e02d:
     version: '7.6'
+  5e621ffa-cd3d-4fbf-8302-4932d01f8eb6:
+    version: '7.7'
 format-version: '2'
