--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "packages/java7"]
-	path = packages/java7
-  url  = git@github.wdf.sap.corp:idefix/bosh-package-java7.git
 [submodule "src/hybris-kafka-riemann-reporter"]
 	path = src/hybris-kafka-riemann-reporter
     url  = git@github.wdf.sap.corp:predictor/hybris-kafka-riemann-reporter.git
+[submodule "packages/java"]
+	path = packages/java
+	url = https://github.wdf.sap.corp/idefix/bosh-package-java.git
