--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -1,13 +1,13 @@
 ---
-kafka/kafka_2.10-0.8.1.1.tgz:
-  object_id: bed3d75e-ed4b-4bd4-8255-c1f6ac3b1c88
-  sha: 7288a43bb0732789ff0d76d820fc7f40553854fe
-  size: 13790731
 maven3/apache-maven-3.2.3-bin.tar.gz:
   object_id: 205998c5-a517-48d7-ac94-bb0ef26c0edf
   sha: 1ce6641f7dcb4fd5785bedcdca2979da83f6d23f
   size: 6956162
-java7/openjdk-1.7.0_65.tar.gz:
-  object_id: d912b423-092b-411e-8ced-3946363e1860
-  sha: 8e6d34305e11bd151e458af0125411a4e1797e80
-  size: 67008821
+java/openjdk-jre-trusty-1.8.0_45.tar.gz:
+  object_id: 0fbd51a2-a942-4f4e-a183-7cc3400a808c
+  sha: 6517390047b05bdb8dd02b3895378112207abda7
+  size: 44988428
+kafka/kafka_2.11-0.8.2.1.tgz:
+  object_id: 8c7ffa73-12c0-4eb9-bbaf-1c23f2162726
+  sha: ddd463f05ed1580706eb96532100e0690751164d
+  size: 15771850
