--- a/.final_builds/packages/hybris-kafka-riemann-reporter/index.yml
+++ b/.final_builds/packages/hybris-kafka-riemann-reporter/index.yml
@@ -12,4 +12,8 @@ builds:
     version: 69e30ba38d923a57e9786a1a963a39b5e1f9e49c
     sha1: 01a03d64c046530b394992b25c4f1aaabf68e352
     blobstore_id: 43c5e9c5-c4de-4efe-a3c7-a9c8305c95b7
+  6bd64444b002088ea7ce1bd8001b297fcc0566d3:
+    version: 6bd64444b002088ea7ce1bd8001b297fcc0566d3
+    sha1: 5b018deb8634b4a7515d461ed31ab0a3d34d9308
+    blobstore_id: 8df5ecb0-c3d3-494b-a3fb-dfbe4c190f50
 format-version: '2'
