CAPA-820 Released kafka-hybris 7.10

--- a/.final_builds/jobs/kafka/index.yml
+++ b/.final_builds/jobs/kafka/index.yml
@@ -28,4 +28,8 @@ builds:
     version: e911a6e6a7dd92e0881b7d93a3826a23e8ff26e5
     sha1: 7427c8457cd0faa04132f3e293341db0d61e33cf
     blobstore_id: 2c9117d8-8811-44f5-817b-f927204d234b
+  c276485edcb4f31b6577bef775ecf5e62d5b72e1:
+    version: c276485edcb4f31b6577bef775ecf5e62d5b72e1
+    sha1: ec35f958281921c734c2e34810cbbec0ee4fe35e
+    blobstore_id: ac7e7f98-35da-4f99-a29a-acb04d245f2f
 format-version: '2'
