--- a/releases/index.yml
+++ b/releases/index.yml
@@ -36,4 +36,6 @@ builds:
     version: '7.8'
   2651a217-a365-42d7-bc20-33064dda7d5f:
     version: '7.9'
+  5e9000e4-38a5-43be-9f3a-752861585787:
+    version: '7.10'
 format-version: '2'
