--- a/releases/index.yml
+++ b/releases/index.yml
@@ -38,4 +38,6 @@ builds:
     version: '7.9'
   5e9000e4-38a5-43be-9f3a-752861585787:
     version: '7.10'
+  8cadc5fd-33af-493b-9a70-ff9e69525d55:
+    version: '7.11'
 format-version: '2'
