--- a/releases/index.yml
+++ b/releases/index.yml
@@ -42,4 +42,6 @@ builds:
     version: '7.11'
   b35ac817-6bd6-4398-a000-0715b1d12d1b:
     version: '7.12'
+  a784fb75-4be3-4649-9309-244e06a17bc6:
+    version: '7.13'
 format-version: '2'
