--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,21 @@
 config/dev.yml
 config/private.yml
 config/settings.yml
-releases/*.tgz
+releases/**/*.tgz
 dev_releases
+release
 blobs/*
 .blobs
 .dev_builds
 .vagrant
 .idea
 .DS_Store
-.final_builds/packages/**/*.tgz
 .final_builds/jobs/**/*.tgz
+.final_builds/packages/**/*.tgz
 *.swp
 *~
 *#
 #*
 tmp
 my*.yml
-releases/**/*.tgz
-blobs
+*credentials.yml
