--- a/templates/infrastructure-warden.yml
+++ b/templates/infrastructure-warden.yml
@@ -1,6 +1,5 @@
 meta:
   environment: kafka-warden
-  network_name: (( merge ))
 
   stemcell:
     name: bosh-warden-boshlite-ubuntu
@@ -13,15 +12,9 @@ update:
   update_watch_time: 1000-30000
 
 jobs:
-  - name: kafka_z1
-    instances: 2
+  - name: kafka
     networks:
-      - name: (( meta.network_name ))
-        static_ips: ~
-    properties:
-      kafka:
-        zookeeper:
-          connect: ~
+      - name: kafka1
 
 compilation:
   cloud_properties:
@@ -33,71 +26,71 @@ resource_pools:
       name: random
 
 networks:
-- name: (( meta.network_name ))
+- name: kafka1
   # Assumes up to 5 VMs, including 1 static and 4 dynamic.
   # Plus 5 (double the size) unused IPs, due to BOSH bug/quirk.
   subnets:
   - cloud_properties:
       name: random
-    range: 10.244.2.0/30
+    range: 10.244.11.0/30
     reserved:
-    - 10.244.2.1
+    - 10.244.11.1
     static:
-    - 10.244.2.2
+    - 10.244.11.2
 
   - cloud_properties:
       name: random
-    range: 10.244.2.4/30
+    range: 10.244.11.4/30
     reserved:
-    - 10.244.2.5
+    - 10.244.11.5
     static: []
   - cloud_properties:
       name: random
-    range: 10.244.2.8/30
+    range: 10.244.11.8/30
     reserved:
-    - 10.244.2.9
+    - 10.244.11.9
     static: []
   - cloud_properties:
       name: random
-    range: 10.244.2.12/30
+    range: 10.244.11.12/30
     reserved:
-    - 10.244.2.13
+    - 10.244.11.13
     static: []
   - cloud_properties:
       name: random
-    range: 10.244.2.16/30
+    range: 10.244.11.16/30
     reserved:
-    - 10.244.2.17
+    - 10.244.11.17
     static: []
 
   # Bonus double-sized network required due to BOSH oddity
   - cloud_properties:
       name: random
-    range: 10.244.2.20/30
+    range: 10.244.11.20/30
     reserved:
-    - 10.244.2.21
+    - 10.244.11.21
     static: []
   - cloud_properties:
       name: random
-    range: 10.244.2.24/30
+    range: 10.244.11.24/30
     reserved:
-    - 10.244.2.25
+    - 10.244.11.25
     static: []
   - cloud_properties:
       name: random
-    range: 10.244.2.28/30
+    range: 10.244.11.28/30
     reserved:
-    - 10.244.2.29
+    - 10.244.11.29
     static: []
   - cloud_properties:
       name: random
-    range: 10.244.2.32/30
+    range: 10.244.11.32/30
     reserved:
-    - 10.244.2.33
+    - 10.244.11.33
     static: []
   - cloud_properties:
       name: random
-    range: 10.244.2.36/30
+    range: 10.244.11.36/30
     reserved:
-    - 10.244.2.37
+    - 10.244.11.37
     static: []
