--- a/templates/stub.yml
+++ b/templates/stub.yml
@@ -2,12 +2,13 @@
 meta:
   environment: NAME
   dns_root: microbosh
-  network_name: kafka1
   security_groups:
-    - default
+    - kafka
+  stemcell:
+    name: STEMCELL
 
 director_uuid: PLACEHOLDER-DIRECTOR-UUID
 
 releases:
-  - name: kafka.hybris
+  - name: kafka
     version: latest
